--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const members = Object.values(modules).map((mod: any) => mod.frontmatter);
 ---
 
 <Layout>
-    <h1>Astrotech</h1>
+    <h1>Anthrotech</h1>
     <div>
         同じケモノ界隈でも、意外とフォロワーがどんなことをやっているのか分からないことが多いですよね。
 
