--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,14 @@ if (title) {
 	</body>
 </html>
 
+<style is:global>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+</style>
+
 <style>
 html {
     background-color: #f2f2f2;
@@ -33,7 +41,6 @@ html {
 
 body {
     position: relative;
-    padding-bottom: 30px;
     display: flex;
     flex-direction: row;
     justify-content: center;
