--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,12 +34,8 @@ const members = Object.values(modules).map((mod: any) => mod.frontmatter);
         </a>
     </div>
 
-    <h2>ToDo</h2>
-    <ul>
-        <li>webページを良い感じにする</li>
-        <li>仮ロゴもなんとかする</li>
-        <li>DiscordにGitHubと連携したお楽しみ要素を追加する</li>
-    </ul>
+    <h2>Past Activities</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=sPJorN7LlSh_C-V4&amp;list=PLlsx9wlvmNs30tN7OMWwECUDqDL5I_kwj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <h2>Member Directory</h2>
     <div id="members">
