--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,38 @@ if (title) {
     padding: 0;
     box-sizing: border-box;
 }
+
+ul,ol {
+    padding-left: 1.8em;
+}
+
+ul> li, ol>li {
+    margin: 0.4rem 0;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+h3 {
+    font-size: 1.3em;
+}
+
+:is(h1, h2) ~ :is(h1, h2) {
+    margin-top: 1em;
+}
+
+h3, h4, h5, h6 {
+    margin-top: 0.8em;
+}
+
+pre {
+    padding: 0.5em;
+    border-radius: 0.3em;
+    margin: 0.5em 0;
+}
+
+
 </style>
 
 <style>
