--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,8 @@ if (title) {
     pageTitle = `${pageTitle} - ${title}`
 }
 
+import FileTree from '../components/FileTree.astro'
+
 ---
 <!doctype html>
 <html lang="ja">
@@ -18,7 +20,14 @@ if (title) {
 	</head>
 	<body>
         <div id="wrap">
-            <slot />
+            {Astro.url.pathname != "/" &&
+            <div id="sidebar">
+                <FileTree />
+            </div>
+            }
+            <div id="main">
+                <slot />
+            </div>
         </div>
 	</body>
 </html>
@@ -78,9 +87,31 @@ body {
 }
 
 #wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex-direction: row;
+    padding: 0 20px;
+    flex: 1;
+    justify-content: center;
+}
+
+#sidebar {
+    margin-top: 140px;
+    width: 200px;
+    overflow-y: auto;
+}
+
+@media (max-width: 800px) {
+    #sidebar {
+        display: none;
+    }
+}
+
+#main {
     overflow: hidden;
     display: flex;
-    max-width: 820px;
+    max-width: 940px;
     flex-direction: column;
     gap: 20px;
     flex: 1;
