--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-const { title } = Astro.props
+const { title, description, image } = Astro.props
 
 let pageTitle = 'Anthrotech'
 if (title) {
@@ -7,6 +7,8 @@ if (title) {
 }
 
 import FileTree from '../components/FileTree.astro'
+
+const defaultDescription = 'Anthrotechは、ケモノ好き x 技術好き な人が集まるコミュニティです。ケモノが好きなんだけど、それはそれとして技術のことも好き・興味がある・やってみたい'
 
 ---
 <!doctype html>
@@ -17,6 +19,14 @@ import FileTree from '../components/FileTree.astro'
         <link rel="icon" type="image/png" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
+        <meta name="description" content={description || defaultDescription} />
+
+        <meta property="og:title" content={pageTitle} />
+        <meta property="og:description" content={description || defaultDescription} />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content={Astro.url.href} />
+        <meta property="og:image" content={image || '/favicon.svg'} />
+        <meta name="twitter:card" content={image ? 'summary_large_image' : 'summary'} />
 	</head>
 	<body>
         <div id="wrap">
