--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -51,6 +51,7 @@ if (pageFM.title) {
     title={title}
     description={pageFM.description}
     image={pageFM.image || memberFM.avatar}
+    cardType={pageFM.image ? 'undefined' : 'summary'}
 >
 
     <div
