style: Enhance article formatting with responsive images and improved text styling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -85,6 +85,20 @@ pre {
     overflow-x: auto;
 }
 
+article img {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+article p {
+    margin: 1em 0;
+}
+
+article a {
+    color: #0066cc;
+    text-decoration: underline;
+}
 
 </style>
 
