--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,10 +64,12 @@ ul> li, ol>li {
 
 h2 {
     font-size: 1.5em;
+    margin-top: 1em;
 }
 
 h3 {
     font-size: 1.3em;
+    margin-top: 0.8em;
 }
 
 :is(h1, h2) ~ :is(h1, h2) {
@@ -98,6 +100,13 @@ article p {
 article a {
     color: #0066cc;
     text-decoration: underline;
+}
+
+h2+p {
+    margin-top: 0.2em;
+}
+h3+p {
+    margin-top: 0.2em;
 }
 
 </style>
